Fix the !ENABLE(FILTERS) build https://bugs.webkit.org/show_bug.cgi?id=130394

Reviewed by Gyuyoung Kim.

Add missing includes in rendering to fix compile errors, and include JSC headers to ImageBuffer.h to fix linker errors.

* platform/graphics/ImageBuffer.h:
* rendering/svg/RenderSVGImage.cpp:
* rendering/svg/RenderSVGRoot.cpp:


Canonical link: https://commits.webkit.org/148597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166056 268f45cc-cd09-0410-ab3c-d52691b4dbfc