Source/WebCore/rendering/svg/RenderSVGRoot.cpp
@@ -33,6 +33,8 @@
 #include "Page.h"
 #include "RenderIterator.h"
 #include "RenderNamedFlowFragment.h"
+#include "RenderSVGResource.h"
+#include "RenderSVGResourceContainer.h"
 #include "RenderView.h"
 #include "SVGImage.h"
 #include "SVGLength.h"
